fix: align center gallery

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -204,3 +204,7 @@ nav a:hover {
   height: auto;
   text-align: center;
 }
+
+.self-center {
+  align-self: center;
+}
